--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deploy-test",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "author": "Tijl",
   "license": "MIT",
   "private": true,
@@ -20,7 +20,34 @@
     "release": "release"
   },
   "devDependencies": {
-    "fs": "^0.0.1-security",
-    "release": "vercel/release"
+    "fs-extra": "5.0.0",
+    "release": "^6.3.0",
+    "prettier": "^2.2.1"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "bracketSpacing": true,
+    "embeddedLanguageFormatting": "auto",
+    "htmlWhitespaceSensitivity": "css",
+    "insertPragma": false,
+    "jsxBracketSameLine": false,
+    "jsxSingleQuote": false,
+    "printWidth": 80,
+    "proseWrap": "preserve",
+    "quoteProps": "as-needed",
+    "requirePragma": false,
+    "semi": true,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "all",
+    "useTabs": false
+  },
+  "lint-staged": {
+    "**/*.+(js|ts|tsx)": [
+      "eslint"
+    ],
+    "**/*.+(js|json|ts|tsx)": [
+      "prettier --write"
+    ]
   }
 }
