--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deploy-test",
-  "version": "1.0.18",
+  "version": "1.0.19",
   "author": "Tijl",
   "license": "MIT",
   "private": true,
@@ -17,10 +17,11 @@
     ]
   },
   "scripts": {
-    "release": "release",
-    "lerna": "lerna"
+    "release:patch": "yarn version --patch && VERSION=$npm_package_version && print-version",
+    "print-version": "dotenv cross-var echo %VERSION%"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "fs-extra": "5.0.0",
     "prettier": "^2.2.1",
     "release": "^6.3.0"
