--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deploy-test",
-  "version": "1.0.21",
+  "version": "1.0.22",
   "author": "Tijl",
   "license": "MIT",
   "private": true,
@@ -17,8 +17,8 @@
     ]
   },
   "scripts": {
-    "release:patch": "yarn version --patch && VERSION=$npm_package_version && yarn printversion",
-    "printversion": "dotenv cross-var echo %VERSION%"
+    "release:patch": "yarn version --patch && version=$npm_package_version && yarn printversion",
+    "printversion": "echo $version"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
