--- a/packages/project2/package.json
+++ b/packages/project2/package.json
@@ -1,16 +1,16 @@
 {
   "name": "project2",
-  "version": "1.0.17",
+  "version": "1.0.37",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "package1": "1.0.17",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4",
-    "package1Json": "1.0.17"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
