--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deploy-test",
-  "version": "1.0.39",
+  "version": "2.0.0",
   "author": "Tijl",
   "license": "MIT",
   "private": true,
@@ -17,7 +17,9 @@
     ]
   },
   "scripts": {
-    "release:patch": "yarn version --patch && ./release.sh"
+    "version:patch": "yarn version --patch --no-git-tag-version --no-commit-hooks && ./version.sh",
+    "version:minor": "yarn version --minor --no-git-tag-version --no-commit-hooks && ./version.sh",
+    "version:major": "yarn version --major --no-git-tag-version --no-commit-hooks && ./version.sh"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
