--- a/packages/package1/package.json
+++ b/packages/package1/package.json
@@ -1,8 +1,15 @@
 {
-  "name": "package1",
-  "version": "1.0.38",
+  "name": "@tijlivens/package1",
+  "version": "2.0.0",
   "main": "index.js",
   "author": "Tijl",
   "license": "MIT",
-  "private": true
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TijlIvens/deploy-test",
+    "directory": "packages/package1"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  }
 }
