--- a/packages/project2/package.json
+++ b/packages/project2/package.json
@@ -1,16 +1,20 @@
 {
   "name": "project2",
-  "version": "1.0.38",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "package1": "1.0.17",
+    "@tijlivens/package1": "1.0.17",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TijlIvens/deploy-test"
   },
   "scripts": {
     "start": "react-scripts start",
