--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,8 @@ jobs:
 
       - name: Commit & Push changes
         run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.co"
+          git config --local user.name "github-actions[bot]"
           git add -A && git commit -m "update package version to ${{ env.version }}"
           remote_branch="https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
           git push "$remote_branch" HEAD:$GITHUB_REF
