--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,17 +46,18 @@ jobs:
           git add -A && git commit -m "update package version to ${{ env.version }}"
           git push ${{ env.REMOTE_ORIGIN }} HEAD:$GITHUB_REF
 
-      - uses: actions/checkout@v2
-        with:
-          ref: main
-          clean: false
+      # - uses: actions/checkout@v2
+      #   with:
+      #     ref: main
+      #     clean: false
 
       - name: Merge to main
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.co"
           git config --local user.name "github-actions[bot]"
-          git fetch ${{ env.REMOTE_ORIGIN }} ${GITHUB_REF#refs/heads/}
-          git merge origin/${GITHUB_REF#refs/heads/} --allow-unrelated-histories
+          git fetch ${{ env.REMOTE_ORIGIN }} main
+          git checkout main
+          git merge ${GITHUB_REF#refs/heads/}
           git push ${{ env.REMOTE_ORIGIN }} main
 
       - name: Create Release
