--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,11 +46,6 @@ jobs:
           git add -A && git commit -m "update package version to ${{ env.version }}"
           git push ${{ env.REMOTE_ORIGIN }} HEAD:$GITHUB_REF
 
-      # - uses: actions/checkout@v2
-      #   with:
-      #     ref: main
-      #     clean: false
-
       - name: Merge to main
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.co"
@@ -59,6 +54,11 @@ jobs:
           git checkout main
           git merge ${GITHUB_REF#refs/heads/}
           git push ${{ env.REMOTE_ORIGIN }} main
+
+      - uses: actions/checkout@v2
+        with:
+          ref: main
+          clean: false
 
       - name: Create Release
         id: create_release
