--- a/.github/workflows/set-tag.yml
+++ b/.github/workflows/set-tag.yml
@@ -10,6 +10,8 @@ jobs:
     if: github.event.pull_request.merged
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+
       - name: Set version variable
         run: |
           export VERSION="$(grep 'version' package.json | head -n 1 | cut -d '"' -f4 | tr -d '[[:space:]]')"
